# SeetaFaceEngine

FaceDetection/: CMakeLists.txt
FaceDetection/include/: common.h
FaceDetection/include/feat/: surf_feature_map.h
FaceDetection/include/util/: image_pyramid.h  math_func.h
FaceDetection/src/classifier/: surf_mlp.cpp
FaceDetection/src/test/: facedetection_test.cpp
